fixing overlapping class names, better layout for the week

--- a/css/vatican_manuscripts.css
+++ b/css/vatican_manuscripts.css
@@ -28,7 +28,8 @@ img.index-list-pics {
 	transform: rotate(45deg);
 	font-weight: bold;
 	font-size: 115%;
-	padding-top: 1rem;
+	padding-top: 1.5rem;
+	text-align: center;
 }
 
 div.index-list {
